[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["cisakev"]

[project]
name = "cisakev"
version = "1.0.4_alpha"
description = "CLI tool for interacting with the CISA Known Exploited Vulnerabilities (KEV) catalog"
authors = [
    {name = "Zen (binarypanda)" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "tabulate",
    "requests",
    "rich"
]

[project.urls]
Homepage = "https://github.com/zen29d/cisakev"

[project.scripts]
cisakev = "cisakev.cli:main"
